# marbellous

./: .gitignore  .gitmodules  LICENSE  README.MD  _config.yml  index.html
.github/workflows/: main.yml
Notes/: Settings.md  pegjs.md
Notes/Backend/: build.md  components.md  dropper.md
Notes/Design/: GUI.md
WebFrontend/: actions.js  index.html  stylesheet.css
backend/: CMakeCache.txt  CMakeLists.txt  Documentation.md  Doxyfile  Makefile  Marbellous.js  Marbellous.wasm  cmake_install.cmake  install_manifest.txt  package-lock.json  package.json  webpack.config.js
backend/html/: _color_8cpp.html  _color_8cpp__incl.map  _color_8cpp__incl.md5  _color_8hpp.html  _color_8hpp__dep__incl.map  _color_8hpp__dep__incl.md5  _color_8hpp__incl.map  _color_8hpp__incl.md5  _color_8hpp_source.html  _options_8cpp.html  _options_8cpp__incl.map  _options_8cpp__incl.md5  _options_8hpp.html  _options_8hpp__dep__incl.map  _options_8hpp__dep__incl.md5  _options_8hpp__incl.map  _options_8hpp__incl.md5  _options_8hpp_source.html  _palette_8cpp.html  _palette_8cpp__incl.map  _palette_8cpp__incl.md5  _palette_8hpp.html  _palette_8hpp__dep__incl.map  _palette_8hpp__dep__incl.md5  _palette_8hpp__incl.map  _palette_8hpp__incl.md5  _palette_8hpp_source.html  _point_8hpp.html  _point_8hpp__dep__incl.map  _point_8hpp__dep__incl.md5  _point_8hpp__incl.map  _point_8hpp__incl.md5  _point_8hpp_source.html  _polygon_8cpp.html  _polygon_8cpp__incl.map  _polygon_8cpp__incl.md5  _polygon_8cpp_a1f19c0627114503079a2763c9e6da109_cgraph.map  _polygon_8cpp_a1f19c0627114503079a2763c9e6da109_cgraph.md5  _polygon_8cpp_a5088a85d5a1da45995423603072d2bb1_cgraph.map  _polygon_8cpp_a5088a85d5a1da45995423603072d2bb1_cgraph.md5  (+400 more)
backend/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+20 more)
backend/include/: Color.hpp  Options.hpp  Palette.hpp  Point.hpp  Polygon.hpp  Scene.hpp  WGLContext.hpp  WGLFilter.hpp  WGLRakeRenderer.hpp  WGLRenderer.hpp  WGLSceneRenderer.hpp  WGLVertex.hpp
backend/page/: Marbellous.js  Marbellous.wasm  actions.js  index.html  index.js  stylesheet.css
backend/src/: Color.cpp  Options.cpp  Palette.cpp  Polygon.cpp  WGLContext.cpp  WGLFilter.cpp  WGLRakeRenderer.cpp  WGLRenderer.cpp  WGLSceneRenderer.cpp  main.cpp
demo/backend/: BUILD  CMakeCache.txt  CMakeLists.txt  Makefile  Marbellous.js  Marbellous.wasm  cmake_install.cmake  install_manifest.txt
demo/backend/include/: Color.hpp  Options.hpp  Palette.hpp  Renderer.hpp
demo/backend/page/: Marbellous.js  Marbellous.wasm  actions.js
demo/backend/src/: Color.cpp  Options.cpp  Palette.cpp  Renderer.cpp  main.cpp
demo/frontend/: actions.js  index.html  stylesheet.css
frontend/: actions.js  index.html  package.json  webpack.config.js  webpack.config.js.in
frontend/src/: index.js  parser.js  rake.drawio  rake_syntax.pegjs
hello-world/: BUILD  WORKSPACE  hello.c  hello.html
